verif/test/deca/syntax/invalid/invalid-float2-verif.res
src/test/deca/syntax/invalid/invalid-float2.deca:2:15: no viable alternative at input 'e'
